added error handling functionalities

--- a/src/config/.env
+++ b/src/config/.env
@@ -1,2 +1,2 @@
 PORT = 9000
-DB_URI = mongodb+srv://ifenna:Pascalisreal@2002@cluster0.6op0n.mongodb.net/BindlyDB?retryWrites=true&w=majority
+DB_URI = mongodb+srv://Pascal:Pascalisreal%402002@cluster0.5xulu.mongodb.net/?retryWrites=true&w=majority
