--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
