--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/server.ts"
+    "scripts": {
+      "start": "node dist/index.js",
+      "postinstall": "tsc",
+      "watch-node": "nodemon dist/index.js",
+      "watch-ts": "tsc -w"
+    }
   },
   "keywords": [],
   "author": "",
