--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "scripts": {
-      "start": "node dist/index.js",
-      "postinstall": "tsc",
-      "watch-node": "nodemon dist/index.js",
-      "watch-ts": "tsc -w"
-    }
+    "start": "ts-node src/server.ts",
+    "dev": "nodemon -x ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,24 +14,25 @@
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "formidable": "^2.0.1",
     "heroku": "^7.65.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.0",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.14",
     "@types/formidable": "^2.0.5",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.8.3",
+    "@types/node": "^18.11.4",
     "ts-node-dev": "^2.0.0"
   },
   "engines": {
