--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/server.ts",
-    "dev": "nodemon -x ts-node src/server.ts"
+    "start": "node dist/server.js",
+    "dev": "tsc"
   },
   "keywords": [],
   "author": "",
