--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
+    "postinstall": "tsc",
     "dev": "tsc"
   },
   "keywords": [],
